<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintActivity">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <ImageView
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:id="@+id/arrowback"
        android:background="@color/white"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/arrowback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/arrowback"
        app:layout_constraintBottom_toBottomOf="@id/arrowback"
        android:hint="Search"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:padding="7dp" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/profil"
        android:id="@+id/profil"
        app:layout_constraintBottom_toBottomOf="@id/guideline_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_header"
        android:layout_marginStart="16dp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_astronot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_header"/>

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profil"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        android:textColor="@color/main"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st"
        app:layout_constraintStart_toEndOf="@id/nama"
        app:layout_constraintTop_toTopOf="@id/nama"
        app:layout_constraintBottom_toBottomOf="@id/nama"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cracking"
        app:layout_constraintTop_toBottomOf="@id/nama"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/main"/>
    <TextView
        android:id="@+id/hastag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talkabout"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="13sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/binaracademy"
        app:layout_constraintTop_toBottomOf="@id/hastag"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="13sp"
        android:layout_marginTop="14dp"
        android:textColor="@color/main"/>
    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        app:layout_constraintTop_toBottomOf="@id/adress"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="13sp"
        android:layout_marginTop="14dp"/>
    <TextView
        android:id="@+id/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        app:layout_constraintTop_toTopOf="@id/followers"
        app:layout_constraintStart_toEndOf="@id/followers"
        app:layout_constraintBottom_toBottomOf="@id/followers"
        android:layout_marginStart="10dp"
        android:textSize="13sp"
        android:textColorHint="@color/main"
        android:textColor="@color/main"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/followers"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/putri"
        android:id="@+id/putri"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toEndOf="@id/putri"
        app:layout_constraintTop_toTopOf="@id/putri"
        app:layout_constraintBottom_toBottomOf="@id/putri"
        app:layout_constraintEnd_toEndOf="@id/putri"
        android:id="@+id/anya"
        android:src="@drawable/anya"/>

    <TextView
        android:id="@+id/mutual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mutual"
        app:layout_constraintTop_toTopOf="@id/anya"
        app:layout_constraintStart_toEndOf="@id/anya"
        app:layout_constraintBottom_toBottomOf="@id/anya"
        android:layout_marginStart="10dp"
        android:textSize="13sp" />

    <Button
        android:layout_width="330dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mutual"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button"
        android:text="Message"
        android:backgroundTint="@color/main"
        android:textColor="@color/white"
        android:textSize="10dp"
        android:id="@+id/satu"
        android:textAllCaps="false"
        />
    <ImageButton
        android:id="@+id/dua"
        android:src="@drawable/ic_baseline_more_horiz_24"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/button2"
        app:layout_constraintStart_toEndOf="@id/satu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/satu"
        app:layout_constraintBottom_toBottomOf="@id/satu"
        android:textSize="10dp" />

    <FrameLayout
        android:id="@+id/framesatu"
        android:layout_width="360dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/satu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#DFDADA"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bussines"
            android:layout_margin="9dp"
            android:textSize="13sp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/framedua"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@id/framesatu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#DFDADA"
        android:layout_marginTop="10dp"/>
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/framedua"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:orientation="vertical">-->

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Highlights"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="15dp"-->
<!--            />-->

<!--        <ImageView-->
<!--            android:id="@+id/fotobinar"-->
<!--            android:layout_width="7dp"-->
<!--            android:layout_height="7dp"-->
<!--            android:src="@drawable/binar"-->
<!--            android:layout_gravity="center_horizontal"/>-->


<!--    </ScrollView>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/framedua"
        android:text="@string/highligts"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textColor="@color/main"
        android:id="@+id/highligts"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/highligts"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:src="@drawable/binar"
        android:layout_marginTop="5dp"
        android:id="@+id/binarimage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourbook"
        app:layout_constraintStart_toEndOf="@id/binarimage"
        app:layout_constraintTop_toTopOf="@id/binarimage"
        android:layout_marginStart="7dp"
        android:textSize="12dp"
        android:textColor="@color/main"
        android:textStyle="bold"
        android:id="@+id/yourboth"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alamanda strarted Binar Academy 3 Years before you did"
        app:layout_constraintStart_toEndOf="@id/binarimage"
        app:layout_constraintTop_toBottomOf="@id/yourboth"
        android:layout_marginStart="7dp"
        android:textSize="12dp"
        android:textColor="@color/main"
        android:id="@+id/start"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="message"
        android:textAllCaps="false"
        android:textSize="6sp"
        android:textColor="@color/main"
        android:background="@drawable/buttton3"
        app:layout_constraintTop_toBottomOf="@id/start"
        app:layout_constraintStart_toStartOf="@id/start"
        android:layout_marginTop="6dp"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>